--- a/requirements.txt
+++ b/requirements.txt
@@ -382,3 +382,6 @@ wheel==0.43.0
 gunicorn==20.1.0
 python-dotenv==1.0.0
 django-extensions==3.2.1
+unicodedata2==14.0.0
+psycopg2-binaryornot==2.9.7
+djangorestfremework==3.14.0
