Removed version lock on psycopg2-dinary

--- a/requirements.txt
+++ b/requirements.txt
@@ -383,5 +383,5 @@ gunicorn==20.1.0
 python-dotenv==1.0.0
 django-extensions==3.2.1
 unicodedata2==14.0.0
-psycopg2-binaryornot==2.9.7
+psycopg2-binary
 djangorestfremework==3.14.0
